# imagenes

Tareas/Tarea01/ltilib/: Makefile  ShowImage  main.cpp
Tareas/Tarea01/opencv/: CMakeCache.txt  CMakeLists.txt  Makefile  ShowImage  cmake_install.cmake  main.cpp
